--- a/index.html
+++ b/index.html
@@ -73,12 +73,16 @@
         <p class="price">Preço: 9 Euro</p>
         <p><strong>Gênero:</strong> BOSSA/SAMBA-ROCK/LATIN JAZZ/MPB</p>
         <p><strong>Descrição:</strong> Jorge Ben Jor é um dos nomes mais icônicos da música brasileira [...]</p>
-        <p><strong>Description:</strong> Jorge Ben Jor is one of the most iconic names in Brazilian music, considered one of the pioneers of the mix of samba, bossa nova, jazz and rock. Born as Jorge Duilio Lima Menezes on March 22, 1939, in Rio de Janeiro, he stood out for his innovative fusion of rhythms and the creation of a unique style. His career began in the 1950s, but it was in the 1960s that he achieved great success, with songs that became classics, such as "Mas, Que Nada", "Que Maravilha" and "Chove Chuva".
-An interesting fact about Jorge Ben Jor is that he was one of the first to incorporate the use of the seven-string guitar in his songs, giving a characteristic sound to his style. In addition, he has a strong connection with African music, something that was evident in several of his compositions, reflecting his interest in Afro-Brazilian rhythms.
-Jorge Ben Jor also became famous for his contagious energy on stage and for his lyrics that celebrated life, love and joy, elements that still mark Brazilian music today. Even with so many hits, he always maintained an irreverent and creative attitude, never being bound by conventions.
-"Released only in Japan by Phillips in 1972, On Stage is a live album recorded in the land of the rising sun. Over time, it became a cult object.
-The original vinyl is rare. It is the greatest recording of Jorge Ben on stage.
-On Stage is a supernatural album. Jorge Ben and his incisive guitar, accompanied “only” by Trio Mocotó – the great power trio of Brazilian music</p>
+        <p><strong>Description:</strong> Jorge Ben Jor is one of the most iconic names in Brazilian music, considered one of the pioneers of the mix of samba, bossa nova, jazz and rock.<p> 
+<p>Born as Jorge Duilio Lima Menezes on March 22, 1939, in Rio de Janeiro, he stood out for his innovative fusion of rhythms and the creation of a unique style.<p> 
+<p>His career began in the 1950s, but it was in the 1960s that he achieved great success, with songs that became classics, such as "Mas, Que Nada", "Que Maravilha" and "Chove Chuva".<p>
+<p>An interesting fact about Jorge Ben Jor is that he was one of the first to incorporate the use of the seven-string guitar in his songs, giving a characteristic sound to his style.<p>
+<p> In addition, he has a strong connection with African music, something that was evident in several of his compositions, reflecting his interest in Afro-Brazilian rhythms.<p>
+<p>Jorge Ben Jor also became famous for his contagious energy on stage and for his lyrics that celebrated life, love and joy, elements that still mark Brazilian music today. 
+<p>Even with so many hits, he always maintained an irreverent and creative attitude, never being bound by conventions.<p>
+<p>"Released only in Japan by Phillips in 1972, On Stage is a live album recorded in the land of the rising sun. Over time, it became a cult object.<p>
+<p>The original vinyl is rare. It is the greatest recording of Jorge Ben on Stage.<p>
+<p>On Stage is a supernatural album. Jorge Ben and his incisive guitar, accompanied “only” by Trio Mocotó – the great power trio of Brazilian music</p>
         <p><strong>Estoque NL:</strong> 100 / <strong>BR:</strong> 100</p>
       </div>
     </div>
