--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 <p>Mesmo com tantos sucessos, ele sempre manteve uma atitude irreverente e criativa, nunca se prendendo a convenções.<p>
 <p>"Lançado apenas no Japão pela Phillips em 1972, On Stage é um disco ao vivo gravado na terra do sol nascente. Com o tempo, tornou-se objeto de culto.<p>
 <p>O vinil original é raro. É o grande registro de Jorge Ben em cima de um palco.<p>
-<p>On Stage é um disco sobrenatural. Jorge Ben e seu incisivo violão, acompanhados “apenas” pelo Trio Mocotó – o grande power-trio da música brasileira.</p>
-        <p><strong>Description:</strong> Jorge Ben Jor is one of the most iconic names in Brazilian music, considered one of the pioneers of the mix of samba, bossa nova, jazz and rock.<p> 
+<p>On Stage é um disco sobrenatural. Jorge Ben e seu incisivo violão, acompanhados “apenas” pelo Trio Mocotó – o grande power-trio da música brasileira.</p><p>
+       <p><p><strong>Description:</strong> Jorge Ben Jor is one of the most iconic names in Brazilian music, considered one of the pioneers of the mix of samba, bossa nova, jazz and rock.<p> 
 <p>Born as Jorge Duilio Lima Menezes on March 22, 1939, in Rio de Janeiro, he stood out for his innovative fusion of rhythms and the creation of a unique style.<p> 
 <p>His career began in the 1950s, but it was in the 1960s that he achieved great success, with songs that became classics, such as "Mas, Que Nada", "Que Maravilha" and "Chove Chuva".<p>
 <p>An interesting fact about Jorge Ben Jor is that he was one of the first to incorporate the use of the seven-string guitar in his songs, giving a characteristic sound to his style.<p>
