--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 <p>Jorge Ben Jor também ficou famoso por sua energia contagiante nos palcos e por suas letras que celebravam a vida, o amor e a alegria, elementos que ainda hoje marcam a música brasileira.<p>
 <p>Mesmo com tantos sucessos, ele sempre manteve uma atitude irreverente e criativa, nunca se prendendo a convenções.<p>
 <p>"Lançado apenas no Japão pela Phillips em 1972, On Stage é um disco ao vivo gravado na terra do sol nascente. Com o tempo, tornou-se objeto de culto.<p>
-<p>O vinil original é raro. É o grande registro de Jorge Ben em cima de um palco.<p>
+<p>O vinil original é raro. É o grande registro de Jorge Ben em cima de um palco.<p>&nbsp;
 <p>On Stage é um disco sobrenatural. Jorge Ben e seu incisivo violão, acompanhados “apenas” pelo Trio Mocotó – o grande power-trio da música brasileira.</p><p>
-       <p><p><strong>Description:</strong> Jorge Ben Jor is one of the most iconic names in Brazilian music, considered one of the pioneers of the mix of samba, bossa nova, jazz and rock.<p> 
+      &nbsp;<p><strong>Description:</strong> Jorge Ben Jor is one of the most iconic names in Brazilian music, considered one of the pioneers of the mix of samba, bossa nova, jazz and rock.<p> 
 <p>Born as Jorge Duilio Lima Menezes on March 22, 1939, in Rio de Janeiro, he stood out for his innovative fusion of rhythms and the creation of a unique style.<p> 
 <p>His career began in the 1950s, but it was in the 1960s that he achieved great success, with songs that became classics, such as "Mas, Que Nada", "Que Maravilha" and "Chove Chuva".<p>
 <p>An interesting fact about Jorge Ben Jor is that he was one of the first to incorporate the use of the seven-string guitar in his songs, giving a characteristic sound to his style.<p>
@@ -90,7 +90,7 @@
 <p>Jorge Ben Jor also became famous for his contagious energy on stage and for his lyrics that celebrated life, love and joy, elements that still mark Brazilian music today. 
 <p>Even with so many hits, he always maintained an irreverent and creative attitude, never being bound by conventions.<p>
 <p>"Released only in Japan by Phillips in 1972, On Stage is a live album recorded in the land of the rising sun. Over time, it became a cult object.<p>
-<p>The original vinyl is rare. It is the greatest recording of Jorge Ben on Stage.<p>
+<p>The original vinyl is rare. It is the greatest recording of Jorge Ben on Stage.<p>&nbsp;
 <p>On Stage is a supernatural album. Jorge Ben and his incisive guitar, accompanied “only” by Trio Mocotó – the great power trio of Brazilian music</p>
         <p><strong>Estoque NL:</strong> 100 / <strong>BR:</strong> 100</p>
       </div>
