--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <p><strong>Label:</strong> PHILIPPINES RECORDS</p>
         <p><strong>Cat Number:</strong> 00031</p>
         <p class="price">Price: 9 Euro</p>
-        <p><strong>Genre:</strong> BOSSA/SAMBA-ROCK/LATIN JAZZ/MPB</p>
+        <p><strong>Genre:</strong> BOSSA/SAMBA-ROCK/LATIN JAZZ/MPB</p>&nbsp;
         <p><strong>Descrição:</strong> Jorge Ben Jor é um dos nomes mais icônicos da música brasileira, considerado um dos pioneiros da mistura entre samba, bossa nova, jazz e rock.<p>
 <p>Nascido como Jorge Duilio Lima Menezes em 22 de março de 1939, no Rio de Janeiro, ele se destacou pela sua inovadora fusão de ritmos e pela criação de um estilo único.<p>
 <p>Sua carreira começou nos anos 1950, mas foi nos anos 1960 que ele alcançou grande sucesso, com músicas que se tornaram clássicos, como "Mas, Que Nada", "Que Maravilha" e "Chove Chuva".<p>
@@ -80,7 +80,7 @@
 <p>Jorge Ben Jor também ficou famoso por sua energia contagiante nos palcos e por suas letras que celebravam a vida, o amor e a alegria, elementos que ainda hoje marcam a música brasileira.<p>
 <p>Mesmo com tantos sucessos, ele sempre manteve uma atitude irreverente e criativa, nunca se prendendo a convenções.<p>
 <p>"Lançado apenas no Japão pela Phillips em 1972, On Stage é um disco ao vivo gravado na terra do sol nascente. Com o tempo, tornou-se objeto de culto.<p>
-<p>O vinil original é raro. É o grande registro de Jorge Ben em cima de um palco.<p>&nbsp;
+<p>O vinil original é raro. É o grande registro de Jorge Ben em cima de um palco.<p>
 <p>On Stage é um disco sobrenatural. Jorge Ben e seu incisivo violão, acompanhados “apenas” pelo Trio Mocotó – o grande power-trio da música brasileira.</p><p>
       &nbsp;<p><strong>Description:</strong> Jorge Ben Jor is one of the most iconic names in Brazilian music, considered one of the pioneers of the mix of samba, bossa nova, jazz and rock.<p> 
 <p>Born as Jorge Duilio Lima Menezes on March 22, 1939, in Rio de Janeiro, he stood out for his innovative fusion of rhythms and the creation of a unique style.<p> 
