--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <p>Jorge Ben Jor also became famous for his contagious energy on stage and for his lyrics that celebrated life, love and joy, elements that still mark Brazilian music today. 
 <p>Even with so many hits, he always maintained an irreverent and creative attitude, never being bound by conventions.<p>
 <p>"Released only in Japan by Phillips in 1972, On Stage is a live album recorded in the land of the rising sun. Over time, it became a cult object.<p>
-<p>The original vinyl is rare. It is the greatest recording of Jorge Ben on Stage.<p>&nbsp;
+<p>The original vinyl is rare. It is the greatest recording of Jorge Ben on Stage.<p>
 <p>On Stage is a supernatural album. Jorge Ben and his incisive guitar, accompanied “only” by Trio Mocotó – the great power trio of Brazilian music</p>
         <p><strong>Estoque NL:</strong> 100 / <strong>BR:</strong> 100</p>
       </div>
