--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         <p><strong>Label:</strong> PHILIPPINES RECORDS</p>
         <p><strong>Cat Number:</strong> 00031</p>
         <p class="price">Price: 9 Euro</p>
-        <p><strong>Genre:</strong> BOSSA/SAMBA-ROCK/LATIN JAZZ/MPB</p>&nbsp;
+        <p><strong>Genre:</strong> BOSSA/SAMBA-ROCK/LATIN JAZZ/MPB</p>
+        <p><strong>Estoque NL:</strong> 100 / <strong>BR:</strong> 100</p>&nbsp;
         <p><strong>Descrição:</strong> Jorge Ben Jor é um dos nomes mais icônicos da música brasileira, considerado um dos pioneiros da mistura entre samba, bossa nova, jazz e rock.<p>
 <p>Nascido como Jorge Duilio Lima Menezes em 22 de março de 1939, no Rio de Janeiro, ele se destacou pela sua inovadora fusão de ritmos e pela criação de um estilo único.<p>
 <p>Sua carreira começou nos anos 1950, mas foi nos anos 1960 que ele alcançou grande sucesso, com músicas que se tornaram clássicos, como "Mas, Que Nada", "Que Maravilha" e "Chove Chuva".<p>
