--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </head>
 <body>
   <header>
-    <img src="images/logo-stereolove.png" alt="Stereolove Records">
+    <img src="images/LOGO7.png" alt="Stereolove Records">
     <h1>Stereolove Records</h1>
   </header>
 
