--- a/index.html
+++ b/index.html
@@ -83,8 +83,12 @@
       </a>
     </div>
 
-    <!-- Adicione outros discos aqui da mesma forma -->
-
+    <div class="catalogo">
+    <div class="item">
+      <a href="bossa7.html">
+        <img src="images/Bossa7_Frente.png" alt="Bossa7">
+        <p>Bossa7</p>
+      </a>
   </div>
 </body>
 </html>
